--- a/package.json
+++ b/package.json
@@ -4,24 +4,27 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config jest.config.ts",
     "build": "rm -rf build/ && prettier --write src/ && tsc",
     "start:dev": "nodemon",
     "start:prod": "npm run build && node ./dist/app.js",
-    "start:multi": "npm run build"
+    "start:multi": "npm run build && node ./dist/cluster.js"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.2",
     "@types/node": "^17.0.42",
     "@types/uuid": "^8.3.4",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.1.1",
     "nodemon": "^2.0.16",
     "prettier": "2.7.1",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   },
