--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "crud-api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.ts",
+  "main": "src/index.ts",
   "scripts": {
     "test": "jest --config jest.config.ts",
-    "build": "rm -rf build/ && prettier --write src/ && tsc",
+    "prettier:write": "prettier --write src/",
+    "build": "npm run prettier:write && tsc",
     "start:dev": "nodemon",
-    "start:prod": "npm run build && node ./dist/app.js",
-    "start:multi": "npm run build && node ./dist/cluster.js"
+    "start:prod": "npm run build && node ./dist/index.js",
+    "start:multi": "npm run start:prod -- --multi"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
