--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "test": "jest --config jest.config.ts",
+    "test": "jest --config jest.config.json",
+    "test:watch": "npm run test -- --watch",
     "prettier:write": "prettier --write src/",
     "build": "npm run prettier:write && tsc",
     "start:dev": "nodemon",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/jest": "^28.1.2",
     "@types/node": "^17.0.42",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
@@ -25,6 +27,7 @@
     "jest": "^28.1.1",
     "nodemon": "^2.0.16",
     "prettier": "2.7.1",
+    "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
