--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "strictPropertyInitialization": false
-  }
+  },
+  "exclude": ["node_modules", "./src/test"]
 }
